--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,12 @@ section:nth-of-type(3){
   .gitlink:hover {
     text-decoration: underline;
   }
+
+  .learnMore:hover{
+    opacity: 0.7;
+  }
+
+  .learnMore:active{
+    opacity: 0.9;
+    background-color: #eee;
+  }
